--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,17 @@
 spring.application.name=biblioteca
-#Cambio el puerto de la aplicacion
 server.port=8090
 
-#Mis cambios para forzar conflicto
-<<<<<<< HEAD
-#cambios de feature2
-=======
-#cosas de cambio
->>>>>>> feature/cambio1
+spring.port=8090
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-//buenas(cambio de release)
+spring.datasource.url=jdbc:mysql://localhost:3305/apirest
+spring.datasource.username=root
+spring.datasource.password=Mtqd25:)
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.hibernate.ddl-auto=update
+#cada vez que levantamos la app mira si existen o no las tablas. Si no existen las crea.
+spring.jpa.show-sql=true
+#Para que muestre las sentencias sql en los logs
+spring.jpa.properties.hibernate.format_sql=true
+
